# Transformer-Architecture-based-TextExtractor

./: .gitignore  GPU_SETUP.md  README.md  README_TRAINING.md  README_UV_SETUP.md  check_gpu.py  data_processor.py  generate.py  pdf_text_extractor.py  pyproject.toml  requirements.txt  requirements_training.txt  tokenizer.json  train.py  transformer_model.py
logs/: events.out.tfevents.1762976464.RJ.10060.0
